--- a/HTML기초/3-1블록과인라인.html
+++ b/HTML기초/3-1블록과인라인.html
@@ -32,7 +32,7 @@
     </p>
 
     <h3>iframe을 이용한 페이지 삽입</h3>
-    <iframe src="텍스트확인.html" name="show" style="width: 100%; height: 400px;"></iframe>
+    <iframe src="1-1텍스트확인.html" name="show" style="width: 100%; height: 400px;"></iframe>
     <a href="텍스트실습.html" target="show">페이지를 이동합니다</a>
     <a href="텍스트확인.html" target="show">원래페이지로 이동합니다</a>
 
